# mysql-server

./: .bzrignore  CMakeLists.txt  Makefile.am  configure.in
.bzr-mysql/: default.conf
BitKeeper/triggers/: post-commit  triggers-lib.pl
ZERO_CHECK.dir/Debug/: BuildLog.htm
client/: CMakeLists.txt  Makefile.am  client_priv.h  mysql.cc  mysqladmin.cc  mysqlbinlog.cc  mysqlcheck.c  mysqldump.c  mysqlimport.c  mysqlslap.c  mysqltest.c  sql_string.cc
config/ac-macros/: character_sets.m4  ha_ndbcluster.m4  libevent.m4  libevent_configure.m4  misc.m4
dbug/: dbug.c
extra/: CMakeLists.txt  Makefile.am  comp_err.c
extra/libevent/: Makefile.am  devpoll.c  epoll.c  event-config.h  evport.c  kqueue.c  poll.c  select.c
extra/yassl/: yassl.vcproj
include/: Makefile.am  config-win.h  m_ctype.h  m_string.h  my_atomic.h  my_base.h  my_bit.h  my_dbug.h  my_global.h  my_net.h  my_pthread.h  my_sys.h  myisam.h  mysql.h  mysql_com.h  mysql_embed.h  mysql_h.ic  sha2.h  violite.h
include/atomic/: gcc_builtins.h  generic-msvc.h  nolock.h  rwlock.h
include/mysql/: plugin.h
libmysql/: CMakeLists.txt  Makefile.shared  libmysql.c
libmysqld/: CMakeLists.txt  Makefile.am  lib_sql.cc  libmysqld.c  libmysqld.def
libmysqld/examples/: CMakeLists.txt  Makefile.am
mysql-test/: Makefile.am  dump.txt  mysql-test-run.pl  valgrind.supp
mysql-test/include/: falcon_limit1.inc  falcon_limit2.inc  have_falcon.inc  locktrans.inc  master-slave-reset.inc  rpl_udf.inc  wait_for_slave_to_start.inc  wait_for_slave_to_stop.inc  weight_string_chde.inc
mysql-test/lib/: mtr_report.pl
mysql-test/r/: 1st.result  alter_table.result  analyze.result  archive.result  archive_aio_posix.result  backup.result  backup_commit_blocker.result  backup_ddl_blocker.result  backup_errors.result  backup_fkey.result  backup_no_data.result  backup_no_engine.result  backup_objects.result  backup_progress.result  backup_security.result  backup_snapshot.result  backup_tablespace.result  binlog_row_blackhole.result  binlog_stm_blackhole.result  binlog_stm_ctype_cp932.result  cast.result  character_set_client_basic.result  character_set_connection_basic.result  character_set_database_basic.result  character_set_filesystem_basic.result  character_set_server_basic.result  (+165 more)
mysys/: CMakeLists.txt  Makefile.am  charset-def.c  charset.c  hash.c  lf_alloc-pin.c  mf_iocache.c  mf_keycache.c  mf_keycaches.c  my_alloc.c  my_atomic.c  my_compress.c  my_error.c  my_fopen.c  my_fstream.c  my_gethwaddr.c  my_getncpus.c  my_getopt.c  my_getwd.c  my_handler_errors.h  my_lib.c  my_lock.c  my_malloc.c  my_open.c  my_pread.c  my_pthread.c  my_read.c  my_realloc.c  my_seek.c  my_static.c  my_winthread.c  my_write.c  safemalloc.c  thr_alarm.c  thr_lock.c  typelib.c
plugin/: Makefile.am
plugin/audit_null/: Makefile.am  audit_null.c
scripts/: make_binary_distribution.sh  make_win_bin_dist  mysql_system_tables.sql  mysql_system_tables_fix.sql
sql/: CMakeLists.txt  Makefile.am  authors.h  ddl_blocker.cc  ddl_blocker.h  derror.cc  event_data_objects.cc  event_db_repository.cc  event_queue.cc  event_scheduler.cc  events.cc  field.cc  field.h  filesort.cc  ha_ndbcluster.cc  ha_ndbcluster.h  ha_ndbcluster_binlog.cc  ha_ndbcluster_binlog.h  ha_partition.cc  ha_partition.h  handler.cc  handler.h  hostname.cc  init.cc  item.cc  item.h  item_buff.cc  item_cmpfunc.cc  item_cmpfunc.h  item_create.cc  item_create.h  item_func.cc  item_func.h  item_row.cc  item_row.h  item_strfunc.cc  item_strfunc.h  item_subselect.cc  item_subselect.h  item_sum.cc  (+100 more)
sql-bench/: server-cfg.sh
sql-common/: client.c
sql/backup/: CMakeLists.txt  Doxyfile  Makefile.am  api_types.h  archive.cc  archive.h  backup_aux.h  backup_engine.h  backup_kernel.h  backup_progress.cc  backup_progress.h  backup_stream.h  backup_test.cc  backup_test.h  be_default.cc  be_default.h  be_native.h  be_snapshot.cc  be_snapshot.h  be_thread.cc  be_thread.h  buffer_iterator.cc  buffer_iterator.h  catalog.cc  catalog.h  data_backup.cc  debug.h  error.h  kernel.cc  logger.cc  logger.h  map.h  meta_backup.cc  meta_backup.h  meta_data.cc  meta_data.h  si_objects.cc  si_objects.h  sql_backup.cc  stream.cc  (+8 more)
storage/falcon/: Agent.cpp  Agent.h  Alias.cpp  Alias.h  AppEvent.cpp  AppEvent.h  Application.cpp  Application.h  Applications.cpp  Applications.h  Args.cpp  Args.h  ArgsException.cpp  ArgsException.h  AsciiBlob.cpp  AsciiBlob.h  BDB.cpp  BDB.h  BackLog.cpp  BackLog.h  BigInt.cpp  BigInt.h  BigInteger.cpp  BigInteger.h  BinaryBlob.cpp  BinaryBlob.h  Bitmap.cpp  Bitmap.h  Blob.cpp  Blob.h  BlobReference.cpp  BlobReference.h  Btn.cpp  Btn.h  CMakeLists.txt  Cache.cpp  Cache.h  CmdGen.cpp  CmdGen.h  Collation.cpp  (+587 more)
storage/falcon/TransformLib/: BERDecode.cpp  BERDecode.h  BEREncode.cpp  BEREncode.h  BERException.cpp  BERException.h  BERItem.cpp  BERItem.h  BERObject.cpp  BERObject.h  Base64Transform.cpp  Base64Transform.h  DESKeyTransform.cpp  DESKeyTransform.h  DESTransform.cpp  DESTransform.h  DecodeTransform.h  DecryptTransform.h  EncodeTransform.h  EncryptTransform.h  FileTransform.cpp  FileTransform.h  HexTransform.cpp  HexTransform.h  Makefile.am  NullTransform.cpp  NullTransform.h  RSATransform.cpp  RSATransform.h  SHATransform.cpp  SHATransform.h  StreamTransform.cpp  StreamTransform.h  StringTransform.cpp  StringTransform.h  Transform.h  TransformException.cpp  TransformException.h  TransformUtil.cpp  TransformUtil.h  (+2 more)
storage/falcon/snapshot/: JString.cpp  JString.h  Snapshot.cpp  Snapshot.h  Thread.cpp  Thread.h  trace
strings/: CMakeLists.txt  conf_to_src.c  ctype-big5.c  ctype-bin.c  ctype-cp932.c  ctype-czech.c  ctype-euc_kr.c  ctype-eucjpms.c  ctype-extra.c  ctype-gb2312.c  ctype-gbk.c  ctype-latin1.c  ctype-mb.c  ctype-simple.c  ctype-sjis.c  ctype-tis620.c  ctype-uca.c  ctype-ucs2.c  ctype-ujis.c  ctype-utf8.c  ctype-win1250ch.c  ctype.c  decimal.c  dtoa.c  my_vsnprintf.c
support-files/: build-tags  compiler_warnings.supp  mysql.spec.sh
tests/: CMakeLists.txt  mysql_client_test.c
vio/: viosocket.c  viossl.c  viosslfactories.c
win/: README  configure.js  create_def_file.js
(+847 files in other folders)
