# Copyright (C) 2006 MySQL AB
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; version 2 of the License.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

ADD_DEFINITIONS(-D_REENTRANT
                -DENGINE -DSTORAGE_ENGINE -DMEM_DEBUG
                -DNAMESPACE=Nfs
                -DMYSQL_SERVER)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include
                    ${CMAKE_SOURCE_DIR}/regex
                    ${CMAKE_SOURCE_DIR}/sql 
                    . TransformLib
                    ${CMAKE_SOURCE_DIR}/extra/yassl/include
                    ${CMAKE_SOURCE_DIR}/zlib)
IF(CMAKE_GENERATOR MATCHES "Visual Studio 7" OR
   CMAKE_GENERATOR MATCHES "Visual Studio 8")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
  SET(CMAKE_CXX_FLAGS_INIT "${CMAKE_CXX_FLAGS_INIT} /EHsc")
  SET(CMAKE_CXX_FLAGS_DEBUG_INIT "${CMAKE_CXX_FLAGS_DEBUG_INIT} /EHsc")
ENDIF(CMAKE_GENERATOR MATCHES "Visual Studio 7" OR
      CMAKE_GENERATOR MATCHES "Visual Studio 8")
ADD_LIBRARY(ha_falcon
		Agent.cpp 
		Alias.cpp
		AsciiBlob.cpp
		BDB.cpp 
		BigInt.cpp 
		BigInteger.cpp 
		BinaryBlob.cpp 
		Bitmap.cpp 
		Blob.cpp
		BlobReference.cpp 
		Btn.cpp 
		Cache.cpp 
		CmdGen.cpp
		CollationCaseless.cpp 
		CollationUnknown.cpp 
		Collation.cpp 
		CollationManager.cpp
		CompiledStatement.cpp 
		Configuration.cpp
		Connection.cpp 
		Context.cpp 
		Coterie.cpp
		CoterieRange.cpp 
		Database.cpp 
		DatabaseBackup.cpp 
		DatabaseClone.cpp 
		DatabaseCopy.cpp 
		DatabaseMetaData.cpp
		DataOutputStream.cpp 
		DataOverflowPage.cpp 
		DataPage.cpp
		DateTime.cpp 
		Dbb.cpp 
		Debug.cpp
		DeferredIndex.cpp
		DeferredIndexWalker.cpp
		Digest.cpp 
		EditString.cpp 
		EncodedDataStream.cpp
		EncodedRecord.cpp 
		Error.cpp 
		Event.cpp
		Field.cpp 
		Filter.cpp 
		FilterDifferences.cpp 
		FilterSet.cpp
		FilterSetManager.cpp 
		FilterTree.cpp 
		ForeignKey.cpp 
		Format.cpp
		Fsb.cpp 
		FsbDerivedTable.cpp 
		FsbExhaustive.cpp 
		FsbGroup.cpp 
		FsbInversion.cpp
		FsbJoin.cpp 
		FsbOuterJoin.cpp 
		FsbSieve.cpp 
		FsbSort.cpp
		FsbUnion.cpp 
		Gopher.cpp
		ha_falcon.cpp 
		Hdr.cpp 
		Image.cpp
		ImageManager.cpp 
		Images.cpp 
		Index.cpp 
		IndexKey.cpp
		IndexNode.cpp 
		Index2Node.cpp 
		IndexPage.cpp 
		Index2Page.cpp 
		IndexRootPage.cpp 
		Index2RootPage.cpp 
		InfoTable.cpp
		Inversion.cpp
		InversionFilter.cpp 
		InversionPage.cpp 
		InversionWord.cpp 
		IO.cpp
		JString.cpp
		LinkedList.cpp 
		Log.cpp
		LogLock.cpp
		LogStream.cpp 
		MemMgr.cpp 
		MemControl.cpp 
		MemFreeBlock.cpp 
		MemoryResultSetColumn.cpp
		MemoryResultSet.cpp 
		MemoryResultSetMetaData.cpp
		MetaDataResultSet.cpp 
		Module.cpp 
		Mutex.cpp 
		MySQLCollation.cpp
		NAlias.cpp
		NBitmap.cpp 
		NBitSet.cpp 
		NCast.cpp 
		NConnectionVariable.cpp
		NConstant.cpp 
		NDelete.cpp 
		NExists.cpp 
		NField.cpp
		NInSelectBitmap.cpp 
		NInSelect.cpp 
		NInsert.cpp 
		NMatching.cpp
		NNode.cpp 
		NParameter.cpp 
		NRecordNumber.cpp 
		NRepair.cpp
		NReplace.cpp 
		NSelect.cpp 
		NSelectExpr.cpp 
		NSequence.cpp
		NStat.cpp 
		NUpdate.cpp 
		OpSys.cpp 
		Page.cpp
		PageInventoryPage.cpp 
		PagePrecedence.cpp 
		PageWriter.cpp
		Parameter.cpp 
		Parameters.cpp 
		PreparedStatement.cpp
		PrettyPrint.cpp 
		Priority.cpp
		PriorityScheduler.cpp
		Privilege.cpp 
		PrivilegeObject.cpp 
		Protocol.cpp
		PStatement.cpp 
		QueryString.cpp 
		Record.cpp
		RecordGroup.cpp 
		RecordLeaf.cpp 
		RecordLocatorPage.cpp
		RecordSection.cpp
		RecordScavenge.cpp
		RecordVersion.cpp 
		RecoveryObjects.cpp
		RecoveryPage.cpp
		Registry.cpp 
		Repository.cpp
		RepositoryManager.cpp 
		RepositoryVolume.cpp 
		ResultList.cpp
		ResultSet.cpp 
		ResultSetMetaData.cpp 
		Role.cpp 
		RoleModel.cpp
		RootPage.cpp 
		Row.cpp 
		RSet.cpp 
		SavePoint.cpp
		ScaledBinary.cpp 
		Scan.cpp
		ScanDir.cpp 
		Scavenger.cpp 
		Schedule.cpp 
		Scheduled.cpp
		ScheduleElement.cpp 
		Scheduler.cpp 
		Schema.cpp 
		Search.cpp
		SearchHit.cpp 
		SearchWords.cpp 
		Section.cpp 
		SectionPage.cpp 
		SectionRootPage.cpp 
		Sequence.cpp
		SequenceManager.cpp 
		SequenceResultSet.cpp
		SerialLogAction.cpp 
		SerialLogControl.cpp 
		SerialLog.cpp
		SerialLogFile.cpp 
		SerialLogRecord.cpp 
		SerialLogTransaction.cpp
		SerialLogWindow.cpp 
		Server.cpp
		Socket.cpp 
		Sort.cpp
		SortMerge.cpp 
		SortRecord.cpp 
		SortRun.cpp 
		SortStream.cpp
		SQLError.cpp 
		SQLParse.cpp 
		SRLBlobDelete.cpp
		SRLBlobUpdate.cpp
		SRLCheckpoint.cpp 
		SRLCommit.cpp 
		SRLCreateIndex.cpp
		SRLCreateSection.cpp
		SRLCreateTableSpace.cpp
		SRLData.cpp 
		SRLDataPage.cpp 
		SRLDelete.cpp 
		SRLDeleteIndex.cpp 
		SRLDropTable.cpp 
		SRLDropTableSpace.cpp 
		SRLFreePage.cpp 
		SRLIndexAdd.cpp
		SRLIndexDelete.cpp
		SRLIndexPage.cpp
		SRLIndexUpdate.cpp
		SRLInversionPage.cpp
		SRLOverflowPages.cpp
		SRLPrepare.cpp 
		SRLRecordStub.cpp 
		SRLRollback.cpp
		SRLRecordLocator.cpp 
		SRLSectionLine.cpp 
		SRLSectionPage.cpp 
		SRLSectionPromotion.cpp 
		SRLSequence.cpp 
		SRLSequencePage.cpp 
		SRLSession.cpp
		SRLSwitchLog.cpp 
		SRLUpdateIndex.cpp
		SRLUpdateBlob.cpp
		SRLUpdateRecords.cpp
		SRLVersion.cpp 
		SRLWordUpdate.cpp 
		Stack.cpp
		Statement.cpp 
		StorageConnection.cpp 
		StorageDatabase.cpp
		StorageHandler.cpp
		StorageTable.cpp 
		StorageTableShare.cpp 
		Stream.cpp
		StreamSegment.cpp 
		SymbolManager.cpp 
		Sync.cpp 
		SyncWait.cpp 
		Synchronize.cpp
		SyncObject.cpp 
		SyncTest.cpp 
		SyncWait.cpp 
		Syntax.cpp 
		TableAttachment.cpp
		Table.cpp 
		TableFilter.cpp 
		TableSpace.cpp
		TableSpaceManager.cpp
		Thread.cpp 
		ThreadQueue.cpp
		Threads.cpp 
		TimeStamp.cpp 
		Transaction.cpp
		TransactionManager.cpp
		Trigger.cpp
		Unicode.cpp 
		UnTable.cpp 
		User.cpp
		UserRole.cpp 
		Validation.cpp 
		Value.cpp 
		ValueEx.cpp 
		Values.cpp
		ValueSet.cpp 
		View.cpp 
		WString.cpp
		AsciiBlob.h
		BDB.h 
		BigInt.h 
		BigInteger.h 
		BinaryBlob.h 
		Bitmap.h  
		Blob.h
		BlobReference.h  
		Btn.h  
		Cache.h  
		CmdGen.h
		CollationCaseless.h  
		CollationUnknown.h  
		Collation.h  
		CollationManager.h
		CompiledStatement.h  
		Configuration.h
		Connection.h  
		Context.h 
		Coterie.h
		CoterieRange.h 
		Database.h 
		DatabaseBackup.h 
		DatabaseClone.h 
		DatabaseCopy.h 
		DatabaseMetaData.h
		DataOutputStream.h 
		DataOverflowPage.h 
		DataPage.h
		DateTime.h 
		Dbb.h 
		Debug.h
		DeferredIndex.h
		DeferredIndexWalker.h
		DenseArray.h
		Digest.h 
		EditString.h 
		EncodedDataStream.h
		EncodedRecord.h 
		Error.h
		Engine.h
		Event.h
		Field.h 
		Filter.h 
		FilterDifferences.h 
		FilterSet.h
		FilterSetManager.h 
		FilterTree.h 
		ForeignKey.h 
		Format.h
		Fsb.h 
		FsbDerivedTable.h 
		FsbExhaustive.h 
		FsbGroup.h 
		FsbInversion.h
		FsbJoin.h 
		FsbOuterJoin.h 
		FsbSieve.h 
		FsbSort.h
		FsbUnion.h
		Gopher.h
		ha_falcon.h 
		Hdr.h 
		Image.h
		ImageManager.h 
		Images.h 
		Index.h 
		IndexKey.h
		IndexNode.h 
		Index2Node.h 
		IndexPage.h 
		Index2Page.h 
		IndexRootPage.h 
		Index2RootPage.h 
		InfoTable.h
		Interlock.h
		Inversion.h
		InversionFilter.h 
		InversionPage.h 
		InversionWord.h 
		IOx.h
		JString.h
		LinkedList.h 
		Log.h
		LogLock.h
		LogStream.h 
		MemMgr.h 
		MemControl.h 
		MemFreeBlock.h 
		MemoryManager.h
		MemoryResultSetColumn.h
		MemoryResultSet.h 
		MemoryResultSetMetaData.h
		MetaDataResultSet.h 
		Module.h 
		Mutex.h 
		MySQLCollation.h
		NAlias.h
		NBitmap.h 
		NBitSet.h 
		NCast.h 
		NConnectionVariable.h
		NConstant.h 
		NDelete.h 
		NExists.h 
		NField.h
		NInSelectBitmap.h 
		NInSelect.h 
		NInsert.h 
		NMatching.h
		NNode.h 
		nodes.h
		NParameter.h 
		NRecordNumber.h 
		NRepair.h
		NReplace.h 
		NSelect.h 
		NSelectExpr.h 
		NSequence.h
		NStat.h 
		NUpdate.h 
		OpSys.h 
		Page.h
		PageInventoryPage.h 
		PagePrecedence.h 
		PageType.h
		PageWriter.h
		Parameter.h 
		Parameters.h 
		PreparedStatement.h
		PrettyPrint.h 
		Priority.h
		PriorityScheduler.h
		Privilege.h 
		PrivilegeObject.h 
		Protocol.h
		PStatement.h 
		Queue.h 
		QueryString.h 
		Record.h
		RecordGroup.h 
		RecordLeaf.h 
		RecordLocatorPage.h
		RecordScavenge.h
		RecordSection.h
		RecordVersion.h 
		RecoveryObjects.h
		RecoveryPage.h
		Registry.h 
		Repository.h
		RepositoryManager.h 
		RepositoryVolume.h 
		ResultList.h
		ResultSet.h 
		ResultSetMetaData.h 
		Role.h 
		RoleModel.h
		RootPage.h 
		Row.h 
		RSet.h 
		ScaledBinary.h 
		SavePoint.h
		Scan.h
		ScanDir.h 
		Scavenger.h 
		Schedule.h 
		Scheduled.h
		ScheduleElement.h 
		Scheduler.h 
		Schema.h 
		Search.h
		SearchHit.h 
		SearchWords.h 
		Section.h 
		SectionPage.h 
		SectionRootPage.h 
		Sequence.h
		SequenceManager.h 
		SequencePage.h 
		SequenceResultSet.h
		SerialLogAction.h 
		SerialLogControl.h 
		SerialLog.h
		SerialLogFile.h 
		SerialLogRecord.h 
		SerialLogTransaction.h
		SerialLogWindow.h 
		Server.h
		Socket.h 
		Sort.h
		SortMerge.h 
		SortRecord.h 
		SortRun.h 
		SortStream.h
		SparseArray.h
		SQLError.h 
		SQLException.h 
		SQLParse.h 
		SRLBlobDelete.h
		SRLBlobUpdate.h
		SRLCheckpoint.h 
		SRLCommit.h 
		SRLCreateIndex.h
		SRLCreateSection.h
		SRLCreateTableSpace.h
		SRLData.h 
		SRLDataPage.h
		SRLDelete.h 
		SRLDeleteIndex.h 
		SRLDropTable.h 
		SRLDropTableSpace.h 
		SRLFreePage.h 
		SRLIndexAdd.h
		SRLIndexDelete.h
		SRLIndexPage.h
		SRLInversionPage.h
		SRLIndexUpdate.h
		SRLOverflowPages.h
		SRLPrepare.h 
		SRLRecordStub.h 
		SRLRollback.h
		SRLRecordLocator.h 
		SRLSectionLine.h 
		SRLSectionPage.h 
		SRLSectionPromotion.h 
		SRLSequence.h 
		SRLSequencePage.h 
		SRLSession.h
		SRLSwitchLog.h 
		SRLUpdateIndex.h
		SRLUpdateBlob.h
		SRLUpdateRecords.h
		SRLVersion.h
		SRLWordUpdate.h 
		Stack.h
		Statement.h 
		StorageConnection.h 
		StorageDatabase.h
		StorageHandler.h
		StorageTable.h 
		StorageParameters.h 
		StorageTableShare.h 
		StorageVersion.h
		Stream.h
		StreamSegment.h 
		SymbolManager.h 
		Sync.h 
		Synchronize.h
		SyncObject.h 
		SyncTest.h 
		SyncWait.h 
		SynchronizationObject.h
		SyncWait.h 
		Syntax.h 
		TableAttachment.h
		Table.h 
		TableFilter.h 
		TableSpace.h
		TableSpaceManager.h
		Thread.h 
		ThreadQueue.h
		Threads.h 
		TimeStamp.h 
		Transaction.h
		TransactionManager.h
		Trigger.h
		Types.h
		Unicode.h 
		UnTable.h 
		User.h
		UserRole.h 
		Validation.h 
		Value.h 
		ValueEx.h 
		Values.h
		ValueSet.h 
		View.h 
		WString.h
		TransFormLib/Base64Transform.cpp  
		TransFormLib/FileTransform.cpp  
		TransFormLib/HexTransform.cpp  
		TransFormLib/NullTransform.cpp
		TransFormLib/SHATransform.cpp  
		TransFormLib/StreamTransform.cpp
		TransFormLib/StringTransform.cpp  
		TransFormLib/TransformException.cpp
		TransFormLib/TransformUtil.cpp  
		TransFormLib/Base64Transform.h  
		TransFormLib/FileTransform.h  
		TransFormLib/HexTransform.h  
		TransFormLib/NullTransform.h
		TransFormLib/SHATransform.h  
		TransFormLib/StreamTransform.h
		TransFormLib/StringTransform.h  
		TransFormLib/Transform.h
		TransFormLib/TransformException.h
		TransFormLib/TransformUtil.h
		../../sql/handler.h)
